# Scheduling-Algorithms-OS

./: .gitignore  CMakeLists.txt  Readme.md  good-output.txt  weird-output.txt  weird-output2.txt
src/Headers/: Instructions.h  memory.h  mutex.h  queue.h  scheduler.h  structs.h
src/Instructions/: Instructions.c
src/Main/: Main.c  milestone2_withoutmutex.c
src/Memory/: memory.c
src/Scheduler/: scheduler.c
src/queue/: Queue.c
